# discord-calendar

./: Cargo.toml  Dockerfile  README.md  icon.psd  index.html  policy.html
.github/workflows/: build.yaml
src/: bot.rs  main.rs  scramble.rs
