[package]
name = "discord-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
icalendar = "0.17.11"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

serenity = { version = "0.12.5", features = ["cache", "client", "collector", "gateway", "http", "model", "utils", "rustls_backend"] }
